crates/plantuml-core/tests/snapshots/class_tests__complex_hierarchy.snap
---
source: crates/plantuml-core/tests/class_tests.rs
assertion_line: 147
expression: svg
---
<?xml version="1.0" encoding="UTF-8"?>
<svg contentStyleType="text/css" data-diagram-type="CLASS" height="398px" preserveAspectRatio="none" style="width:475px;height:398px;background:#FFFFFF;" version="1.1" viewBox="-3.5 -3.5 474.71384 398.48499999999996" width="475px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" zoomAndPan="magnify">
<defs>
<marker id="arrow" markerHeight="8" markerUnits="userSpaceOnUse" markerWidth="10" orient="auto" refX="10" refY="4">
<path d="M0,0 L10,4 L0,8 L4,4 Z" fill="#181818"/>
</marker>
<marker id="arrow-open" markerHeight="8" markerUnits="userSpaceOnUse" markerWidth="10" orient="auto" refX="10" refY="4">
<path d="M0,0 L10,4 L0,8" fill="none" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="inheritance" markerHeight="20" markerUnits="userSpaceOnUse" markerWidth="20" orient="auto" refX="20" refY="10">
<path d="M0,0 L20,10 L0,20 Z" fill="#FFFFFF" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="composition" markerHeight="12" markerUnits="userSpaceOnUse" markerWidth="12" orient="auto" refX="0" refY="6">
<path d="M0,6 L6,0 L12,6 L6,12 Z" fill="#181818"/>
</marker>
<marker id="aggregation" markerHeight="12" markerUnits="userSpaceOnUse" markerWidth="12" orient="auto" refX="0" refY="6">
<path d="M0,6 L6,0 L12,6 L6,12 Z" fill="#FFFFFF" stroke="#181818" stroke-width="1"/>
</marker>
</defs>
<g font-family="sans-serif" lengthAdjust="spacing">
<g id="Repository">
<rect fill="#F1F1F1" height="92.594" rx="2.5" ry="2.5" stroke="#181818" stroke-width="0.5" width="115.12539999999998" x="172.79422" y="288.39099999999996"/>
<ellipse cx="188.79422" cy="304.39099999999996" fill="#B4A7E5" rx="11" ry="11" stroke="#181818" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="12" font-weight="bold" text-anchor="middle" x="188.79422" y="308.39099999999996" textLength="3.719">
I
</text>
<text fill="#000000" font-family="sans-serif" font-size="10" x="204.79422" y="303.39099999999996" textLength="56.746">
«interface»
</text>
<text fill="#000000" font-family="sans-serif" font-size="14" x="204.79422" y="319.39099999999996" textLength="76.957">
Repository
</text>
<line stroke="#181818" stroke-width="0.5" x1="173.79422" x2="286.91962" y1="326.39099999999996" y2="326.39099999999996"/>
<line stroke="#181818" stroke-width="0.5" x1="173.79422" x2="286.91962" y1="331.39099999999996" y2="331.39099999999996"/>
<ellipse cx="180.79422" cy="344.39099999999996" fill="#84BE84" rx="3" ry="3" stroke="#038048" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="14" x="188.79422" y="348.39099999999996" textLength="89.125">
findById(): T
</text>
<ellipse cx="180.79422" cy="360.39099999999996" fill="#84BE84" rx="3" ry="3" stroke="#038048" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="14" x="188.79422" y="364.39099999999996" textLength="64.04">
save(): T
</text>
</g>
<g id="AbstractRepository">
<rect fill="#F1F1F1" height="100.594" rx="2.5" ry="2.5" stroke="#181818" stroke-width="0.5" width="168.47480000000002" x="146.11951999999997" y="127.797"/>
<ellipse cx="162.11951999999997" cy="143.797" fill="#A9DCDF" rx="11" ry="11" stroke="#181818" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="12" font-weight="bold" text-anchor="middle" x="162.11951999999997" y="147.797" textLength="6.853">
A
</text>
<text fill="#000000" font-family="sans-serif" font-size="10" x="178.11951999999997" y="142.797" textLength="52.626">
«abstract»
</text>
<text fill="#000000" font-family="sans-serif" font-size="14" x="178.11951999999997" y="158.797" textLength="136.475">
AbstractRepository
</text>
<line stroke="#181818" stroke-width="0.5" x1="147.11951999999997" x2="313.59432" y1="165.797" y2="165.797"/>
<ellipse cx="154.11951999999997" cy="178.797" fill="#FFCC00" rx="3" ry="3" stroke="#B38600" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="14" x="162.11951999999997" y="182.797" textLength="131.96">
entityClass: Class
</text>
<line stroke="#181818" stroke-width="0.5" x1="147.11951999999997" x2="313.59432" y1="186.797" y2="186.797"/>
<ellipse cx="154.11951999999997" cy="199.797" fill="#84BE84" rx="3" ry="3" stroke="#038048" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="14" x="162.11951999999997" y="203.797" textLength="89.125">
findById(): T
</text>
</g>
<g id="UserRepository">
<rect fill="#F1F1F1" height="64.297" rx="2.5" ry="2.5" stroke="#181818" stroke-width="0.5" width="163.92043999999996" x="3.5" y="3.5"/>
<ellipse cx="19.5" cy="19.5" fill="#ADD1B2" rx="11" ry="11" stroke="#181818" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="12" font-weight="bold" text-anchor="middle" x="19.5" y="23.5" textLength="7.572">
C
</text>
<text fill="#000000" font-family="sans-serif" font-size="14" x="35.5" y="22.5" textLength="108.602">
UserRepository
</text>
<line stroke="#181818" stroke-width="0.5" x1="4.5" x2="166.42043999999996" y1="29.5" y2="29.5"/>
<line stroke="#181818" stroke-width="0.5" x1="4.5" x2="166.42043999999996" y1="34.5" y2="34.5"/>
<ellipse cx="11.5" cy="47.5" fill="#84BE84" rx="3" ry="3" stroke="#038048" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="14" x="19.5" y="51.5" textLength="137.92">
findByName(): User
</text>
</g>
<g id="ProductRepository">
<rect fill="#F1F1F1" height="64.297" rx="2.5" ry="2.5" stroke="#181818" stroke-width="0.5" width="254.59340000000003" x="202.62043999999997" y="3.5"/>
<ellipse cx="218.62043999999997" cy="19.5" fill="#ADD1B2" rx="11" ry="11" stroke="#181818" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="12" font-weight="bold" text-anchor="middle" x="218.62043999999997" y="23.5" textLength="7.572">
C
</text>
<text fill="#000000" font-family="sans-serif" font-size="14" x="234.62043999999997" y="22.5" textLength="130.532">
ProductRepository
</text>
<line stroke="#181818" stroke-width="0.5" x1="203.62043999999997" x2="456.21384" y1="29.5" y2="29.5"/>
<line stroke="#181818" stroke-width="0.5" x1="203.62043999999997" x2="456.21384" y1="34.5" y2="34.5"/>
<ellipse cx="210.62043999999997" cy="47.5" fill="#84BE84" rx="3" ry="3" stroke="#038048" stroke-width="1"/>
<text fill="#000000" font-family="sans-serif" font-size="14" x="218.62043999999997" y="51.5" textLength="267.586">
findByCategory(): List&lt;Product&gt;
</text>
</g>
<g id="edge_AbstractRepository_Repository">
<path d="M230.35692,288.39099999999996 L230.35691999999997,228.391" fill="none" marker-end="url(#inheritance)" stroke="#181818" stroke-dasharray="2,2" stroke-width="1"/>
</g>
<g id="edge_UserRepository_AbstractRepository">
<path d="M230.35691999999997,127.797 L230.35691999999997,97.797 L85.46021999999998,97.797 L85.46021999999998,67.797" fill="none" marker-end="url(#inheritance)" stroke="#181818" stroke-width="1"/>
</g>
<g id="edge_ProductRepository_AbstractRepository">
<path d="M230.35691999999997,127.797 L230.35691999999997,97.797 L329.91714,97.797 L329.91714,67.797" fill="none" marker-end="url(#inheritance)" stroke="#181818" stroke-width="1"/>
</g>
</g>
</svg>
