crates/plantuml-core/tests/snapshots/class_tests__interface.snap
---
source: crates/plantuml-core/tests/class_tests.rs
assertion_line: 80
expression: svg
---
<?xml version="1.0" encoding="UTF-8"?>
<svg contentStyleType="text/css" data-diagram-type="CLASS" height="246px" preserveAspectRatio="none" style="width:169px;height:246px;background:#FFFFFF;" version="1.1" viewBox="-7 -7 169.0982 246.301" width="169px" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" zoomAndPan="magnify">
<defs>
<marker id="arrow" markerHeight="8" markerUnits="userSpaceOnUse" markerWidth="10" orient="auto" refX="10" refY="4">
<path d="M0,0 L10,4 L0,8 L4,4 Z" fill="#181818" stroke="#181818" stroke-linejoin="miter" stroke-width="1"/>
</marker>
<marker id="arrow-open" markerHeight="8" markerUnits="userSpaceOnUse" markerWidth="10" orient="auto" refX="10" refY="4">
<path d="M0,0 L10,4 L0,8" fill="none" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="inheritance" markerHeight="20" markerUnits="userSpaceOnUse" markerWidth="20" orient="auto" refX="20" refY="10">
<path d="M0,0 L20,10 L0,20 Z" fill="none" stroke="#181818" stroke-width="1"/>
</marker>
<marker id="composition" markerHeight="12" markerUnits="userSpaceOnUse" markerWidth="12" orient="auto" refX="0" refY="6">
<path d="M0,6 L6,0 L12,6 L6,12 Z" fill="#181818"/>
</marker>
<marker id="aggregation" markerHeight="12" markerUnits="userSpaceOnUse" markerWidth="12" orient="auto" refX="0" refY="6">
<path d="M0,6 L6,0 L12,6 L6,12 Z" fill="#FFF" stroke="#181818" stroke-width="1"/>
</marker>
</defs>
<g font-family="sans-serif" lengthAdjust="spacing">
<g id="Serializable">
<rect fill="#F1F1F1" height="76.297" rx="2.5" ry="2.5" stroke="#181818" stroke-width="0.5" width="147.8182" x="0" y="148.594"/>
<ellipse cx="16" cy="164.594" fill="#B4A7E5" rx="11" ry="11" stroke="#181818" stroke-width="1"/>
<text fill="#000" font-family="sans-serif" font-size="12" font-weight="bold" text-anchor="middle" x="16" y="168.594" textLength="3.978">
I
</text>
<text fill="#000" font-family="sans-serif" font-size="10" x="32" y="163.594" textLength="54.219">
«interface»
</text>
<text fill="#000" font-family="sans-serif" font-size="14" x="32" y="179.594" textLength="80.821">
Serializable
</text>
<line stroke="#181818" stroke-width="0.5" x1="1" x2="146.8182" y1="186.594" y2="186.594"/>
<line stroke="#181818" stroke-width="0.5" x1="1" x2="146.8182" y1="191.594" y2="191.594"/>
<ellipse cx="8" cy="204.594" fill="#84BE84" rx="3" ry="3" stroke="#038048" stroke-width="1"/>
<text fill="#000" font-family="sans-serif" font-size="14" x="16" y="208.594" textLength="121.818">
serialize(): String
</text>
</g>
<g id="User">
<rect fill="#F1F1F1" height="88.594" rx="2.5" ry="2.5" stroke="#181818" stroke-width="0.5" width="147.8182" x="0" y="0"/>
<ellipse cx="16" cy="16" fill="#ADD1B2" rx="11" ry="11" stroke="#181818" stroke-width="1"/>
<text fill="#000" font-family="sans-serif" font-size="12" font-weight="bold" text-anchor="middle" x="16" y="20" textLength="9.419">
C
</text>
<text fill="#000" font-family="sans-serif" font-size="14" x="32" y="19" textLength="31.91">
User
</text>
<line stroke="#181818" stroke-width="0.5" x1="1" x2="146.8182" y1="26" y2="26"/>
<ellipse cx="8" cy="39" fill="#C82829" rx="3" ry="3" stroke="#C80000" stroke-width="1"/>
<text fill="#000" font-family="sans-serif" font-size="14" x="16" y="43" textLength="92.858">
name: String
</text>
<line stroke="#181818" stroke-width="0.5" x1="1" x2="146.8182" y1="47" y2="47"/>
<ellipse cx="8" cy="60" fill="#84BE84" rx="3" ry="3" stroke="#038048" stroke-width="1"/>
<text fill="#000" font-family="sans-serif" font-size="14" x="16" y="64" textLength="121.818">
serialize(): String
</text>
</g>
<g id="edge_User_Serializable">
<path d="M73.9091,148.594 L73.9091,88.594" fill="none" marker-end="url(#inheritance)" stroke="#181818" stroke-dasharray="2,2" stroke-width="1"/>
</g>
</g>
</svg>
